--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,22 @@
   font-family: Arial, sans-serif;
 }
 /* register and login page */
-body {
+.container-parent {
   background-color: #f9fafb;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px;
+  background-color: #f44b76;
 }
 
-.container {
+.container-register {
   background-color: white;
-  padding: 32px;
+  padding: 100px;
   border-radius: 16px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
+  max-width: 600px;
   width: 100%;
   border: 1px solid #f3f4f6;
 }
@@ -167,10 +168,29 @@ input[type="date"] {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: white; 
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 9999; 
+  z-index: 9999;
+}
+.header-navbar {
+  display: flex;
+  gap: 3px;
+}
+
+@media (max-width: 600px) {
+  .container-register {
+    background-color: white;
+    padding: 32px;
+    border-radius: 16px;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    border: 1px solid #f3f4f6;
+  }
+  .shape-content {
+    display: none;
+  }
 }
