--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ input[type="date"] {
 .button {
   width: 100%;
   padding: 12px;
-  background: linear-gradient(to right, #3b82f6, #8b5cf6);
+  background: #f44b76;
   color: white;
   border: none;
   border-radius: 8px;
@@ -108,9 +108,8 @@ input[type="date"] {
 }
 
 .button:hover {
-  background: linear-gradient(to right, #2563eb, #7c3aed);
+  background: #d83d67; /* darker shade of #f44b76 */
 }
-
 .divider {
   display: flex;
   align-items: center;
@@ -178,6 +177,46 @@ input[type="date"] {
 .header-navbar {
   display: flex;
   gap: 3px;
+}
+/* page not found */
+
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+  font-family: "Arvo", serif;
+}
+
+.page_404 img {
+  width: 100%;
+}
+
+.four_zero_four_bg {
+  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  height: 400px;
+  background-position: center;
+}
+
+.four_zero_four_bg h1 {
+  font-size: 80px;
+}
+
+.four_zero_four_bg h3 {
+  font-size: 80px;
+}
+
+.link_404 {
+  color: #fff !important;
+  padding: 10px 20px;
+  background: #39ac31;
+  margin: 20px 0;
+  display: inline-block;
+}
+.contant_box_404 {
+  margin-top: -50px;
 }
 
 @media (max-width: 600px) {
