--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,9 @@ input[type="date"] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  background-color: #000000a8;
+;
+
 }
 .header-navbar {
   display: flex;
@@ -473,10 +475,7 @@ body {
 #bio {
   text-align: start;
 }
-.link-card:hover {
-  background: #ffffff;
-  color: white;
-}
+
 
 @media (max-width: 500px) {
   .link-card {
@@ -549,9 +548,7 @@ body {
   transition: transform 0.3s ease;
 }
 
-.link-card:hover {
-  transform: translateY(-4px);
-}
+
 
 .link-info {
   position: relative;
@@ -979,8 +976,9 @@ input[type="file"] {
 
 
 .profile-shimmer-container {
-  width: 360px;
+  width: 100%;
   padding: 1rem;
+  height: 100vh;
   border-radius: 12px;
   background-color: #f0f0f0;
   overflow: hidden;
@@ -1057,7 +1055,7 @@ input[type="file"] {
 }
 .shimmer-container {
   padding: 1rem;
-  width: 375px;
+  width: 100%;
   background-color: #f7f9fb;
   border-radius: 10px;
   margin: auto;
