--- a/src/App.css
+++ b/src/App.css
@@ -5,22 +5,21 @@
 }
 /* register and login page */
 .container-parent {
-  background-color: #f9fafb;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-  background-color: #ffffff00;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%;
 }
 
 .container-register {
-  background-color: white;
-  padding: 90px;
-  border-radius: 16px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
-  width: 100%;
-  border: 1px solid #f3f4f6;
+  flex: 1;
+  padding: 40px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #fff;
 }
 
 .icon-box {
@@ -31,7 +30,32 @@
   justify-content: center;
   align-items: center;
 }
+.container-image {
+  width: 50%;
+  overflow: hidden;
+}
+.container-inner {
+  width: 50%;
+}
 
+.container-image img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  filter: blur(2px); 
+}
+@media (max-width: 768px) {
+  .container-parent {
+    flex-direction: column;
+  }
+  .container-inner {
+    width: 100%;
+  }
+
+  .container-image {
+    display: none; /* 👈 Hide image on mobile */
+  }
+}
 h2 {
   font-size: 24px;
   font-weight: bold;
@@ -1142,12 +1166,12 @@ input[type="file"] {
 }
 
 .user-info-content {
-    background: #fff;
-    padding: 12px 12px;
-    border-radius: 10px;
-    width: 100%;
-    max-height: 80vh;
-    overflow-y: auto;
+  background: #fff;
+  padding: 12px 12px;
+  border-radius: 10px;
+  width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .user-info-table {
@@ -1190,6 +1214,7 @@ input[type="file"] {
   font-size: xx-large;
   margin-top: 10px;
   margin-left: 10px;
+  position: absolute;
 }
 
 .MuiToolbar-gutters {
