--- a/public/css/style.css
+++ b/public/css/style.css
@@ -906,3 +906,231 @@ footer .logo {
         margin-right: 0.5rem;
     }
 }
+    @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+        a:hover {
+            text-decoration: none;
+        }
+
+        a {
+            display: inline-block;
+            color: inherit;
+            text-decoration: none;
+        }
+
+        p:nth-last-child(1) {
+            margin: 0;
+        }
+
+        ul,
+        ol {
+            margin: 0;
+            padding: 0;
+        }
+
+        button,
+        button:focus,
+        input:focus,
+        .form-control:focus,
+        .form-select:focus,
+        .form-check-input:focus {
+            outline: 0;
+            box-shadow: none;
+
+        }
+
+        .btn {
+            padding: 8px 15px;
+            font-weight: 600;
+        }
+
+        .blue-btn {
+            background-color: var(--primary-color);
+            color: var(--white);
+            font-size: var(--font-14);
+        }
+
+        .blue-btn:hover,
+        .border-btn:hover {
+            background-color: var(--secondary-color);
+            color: var(--white);
+        }
+
+        .border-btn {
+            border: 1px solid var(--secondary-color-blue);
+            color: var(--secondary-color-blue);
+            font-size: var(--font-14);
+        }
+
+        .btn-inactive,
+        .btn-inactive:hover {
+            background: var(--light-font-color);
+            color: var(--white);
+            cursor: no-drop;
+            font-size: var(--font-14);
+        }
+
+        .intersight_menu {
+
+            background-color: #F8FAFB;
+            padding: 10px;
+            max-width: 264px;
+            height: 100vh;
+            position: fixed;
+            width: 100%;
+            left: 0;
+            top: 0;
+        }
+
+        .top_menu {
+            background: linear-gradient(180deg, #C6D7F4 0%, #FAD7DE 100%);
+            padding: 16px;
+            border-radius: 10px;
+            height: 98vh;
+        }
+
+        .brand .brand-logo img {
+            height: 39px;
+        }
+
+        .menu_div {
+            margin-top: 25px;
+        }
+
+        .menu_div li.without_label {
+            font-size: 12px;
+            font-weight: 600;
+            color: #454545B2;
+            text-transform: uppercase;
+            padding: 25px 10px 10px;
+        }
+
+        .menu_div ul {
+            list-style-type: none;
+        }
+
+        .menu_div li a {
+            color: #000000;
+            width: 100%;
+            height: 36px;
+            border-radius: 10px;
+            padding: 8px 10px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 6px;
+            font-size: 14px;
+            font-weight: 400;
+            position: relative;
+        }
+
+        .menu_div li a.active,
+        .menu_div li a:hover {
+            background: linear-gradient(180deg, #A0BDEE 0%, #EBB3BE 100%);
+            color: var(--dark-font-color);
+            font-weight: 500;
+        }
+
+        .menu_div li a.active svg path,
+        .menu_div li a:hover svg path {
+            fill: var(--secondary-color-blue);
+        }
+
+        .menu_div li a span {
+            position: relative;
+            top: -1px;
+        }
+
+        .bottom_menu {
+            position: absolute;
+            bottom: 20px;
+            left: 0;
+            right: 0;
+            padding: 10px;
+        }
+
+        .bottom_menu p {
+            border-bottom: 1px solid #D9BEC6;
+            padding: 0px 16px 16px;
+            color: #454545;
+        }
+
+        .bottom_menu p a {
+            color: #000000;
+            font-weight: 600;
+            line-height: 24px;
+        }
+
+        .user_person {
+            padding: 0px 12px 0px;
+        }
+
+        .bottom_menu .dropdown button {
+            background: transparent;
+            color: #000000;
+            font-size: 14px;
+            font-weight: 500;
+            text-align: left;
+            gap: 12px;
+        }
+
+        .bottom_menu .dropdown .dropdown-menu li .dropdown-item {
+            color: #000;
+            font-size: var(--font-14);
+            padding: 4px 10px;
+            display: block;
+            height: auto;
+        }
+
+        .person_icon {
+            background: #699640;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .person_name span {
+            font-size: 13px;
+            color: #454545;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            width: 150px;
+        }
+
+        @media (min-width: 1199px) {
+            .navbar-toggler {
+                display: none;
+            }
+        }
+
+        .navbar-toggle .icon-bar:nth-of-type(2) {
+            top: 4px;
+        }
+
+        .navbar-toggle .icon-bar:nth-of-type(3) {
+            top: 8px;
+        }
+
+        .navbar-toggle .icon-bar {
+            position: relative;
+            transition: all 500ms ease-in-out;
+            background-color: #fff;
+            display: block;
+            width: 22px;
+            height: 2px;
+            border-radius: 1px;
+        }
+
+        .navbar-toggle.active .icon-bar:nth-of-type(1) {
+            top: 6px;
+            transform: rotate(45deg);
+        }
+
+        .navbar-toggle.active .icon-bar:nth-of-type(2) {
+            background-color: transparent;
+        }
+
+        .navbar-toggle.active .icon-bar:nth-of-type(3) {
+            top: 2px;
+            transform: rotate(-45deg);
+        }
