--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,6 @@
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  filter: blur(2px); 
 }
 @media (max-width: 768px) {
   .container-parent {
@@ -278,17 +277,21 @@ body {
 .profile-container {
   max-width: 900px;
   margin: 0px auto;
+
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 
 /* Kapak Resmi */
 .cover-photo {
   position: relative;
-  height: 300px;
+  border-radius: 2px;
   background: #ddd;
+  height: 100px;
+  border-radius: 10px;
   overflow: hidden;
 }
 
@@ -319,13 +322,26 @@ body {
 .profile-picture {
   position: relative;
   text-align: center;
-  margin-top: -80px;
+  margin-top: -34px;
+  padding: 0 20px;
+}
+.profile-picture1 {
+  position: relative;
+  text-align: center;
   padding: 0 20px;
 }
 
 .profile-picture img {
-  width: 150px;
-  height: 150px;
+  width: 90px;
+  height: 90px;
+  border: 5px solid #fff;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.profile-picture1 img {
+  width: 90px;
+  height: 90px;
   border: 5px solid #fff;
   border-radius: 50%;
   object-fit: cover;
@@ -458,8 +474,6 @@ body {
   }
 }
 .links-container {
-  max-width: 400px;
-  margin: 0 auto;
   padding: 0px 9px;
   font-family: "Segoe UI", sans-serif;
 }
@@ -549,11 +563,7 @@ body {
   white-space: nowrap;
 }
 
-/* ---------------------------------link */
-.links-container {
-  max-width: 900px;
-  margin: auto;
-}
+
 
 .links-title {
   text-align: center;
@@ -573,7 +583,7 @@ body {
   align-items: flex-start;
   background-color: #fff;
   padding: 8px;
-  border-radius: 12px;
+  border-radius: 7px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   gap: 16px;
   transition: transform 0.3s ease;
@@ -649,6 +659,7 @@ body {
 .editbutton {
   background-color: #014178;
   color: white;
+  height: 37px;
   padding: 9px 36px;
   border-radius: 6px;
 }
@@ -680,8 +691,8 @@ body {
 }
 .linksHeader {
   display: flex;
+  align-items: center;
   justify-content: right;
-  height: 38px;
   margin-right: 10px;
   gap: 50px;
   margin-top: 20px;
@@ -973,8 +984,9 @@ input[type="file"] {
   }
 }
 .edit-icon {
+  color: white;
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
 
   border-radius: 50%;
@@ -1166,12 +1178,11 @@ input[type="file"] {
 }
 
 .user-info-content {
-  background: #fff;
-  padding: 12px 12px;
-  border-radius: 10px;
-  width: 100%;
-  max-height: 80vh;
-  overflow-y: auto;
+    background: #fff;
+    padding: 47px 49px;
+    border-radius: 10px;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .user-info-table {
@@ -1183,7 +1194,7 @@ input[type="file"] {
 .user-info-table th,
 .user-info-table td {
   border: 1px solid #ccc;
-  padding: 1px 5px;
+  padding: 8px 35px;
   text-align: left;
 }
 
@@ -1220,4 +1231,9 @@ input[type="file"] {
 .MuiToolbar-gutters {
   display: flex;
   align-items: baseline;
+}
+input[type="color"] {
+  width: 200px;
+  height: 60px;
+  cursor: pointer;
 }
