--- a/src/App.css
+++ b/src/App.css
@@ -270,6 +270,7 @@ input[type="date"] {
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f2f5;
+  padding-top: 0px;
 }
 
 /* Container */
