--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --maximum-yellow-red: hsl(37, 100%, 68%);
   --royal-blue-dark: hsl(231, 61%, 22%);
   --silver-chalice: hsl(0, 0%, 70%);
@@ -1133,4 +1133,4 @@ footer .logo {
         .navbar-toggle.active .icon-bar:nth-of-type(3) {
             top: 2px;
             transform: rotate(-45deg);
-        }
+        } */
