--- a/src/component/pages/dashboard/password/changePassword.css
+++ b/src/component/pages/dashboard/password/changePassword.css
@@ -156,7 +156,7 @@
 .input-icon {
     position: absolute;
     left: 8px;
-    top: 70%;
+    top: 52%;
     transform: translateY(-50%);
     color: #a0aec0;
     z-index: 2;
@@ -164,7 +164,7 @@
 .password-toggle {
   position: absolute;
   right: 15px;
-  top: 70%;
+  top: 52%;
   transform: translateY(-50%);
   background: none;
   border: none;
@@ -250,6 +250,10 @@
 .auth-footer a:hover {
   color: #5a67d8;
   text-decoration: underline;
+}
+.auth-footer-text {
+    font-size: 20px;
+    font-weight: bold;
 }
 .auth-image-container {
   flex: 1;
