--- a/src/component/pages/dashboard/dashboard.css
+++ b/src/component/pages/dashboard/dashboard.css
@@ -52,7 +52,7 @@ html.lenis {
   padding: 20px;
   min-height: 100%;
   margin-left: 321px;
-  background: linear-gradient(133deg, #ffffff 0%, #b99b87 100%);
+  background: #b99b876b;
 }
 
 /* Mobile Preview Section */
