--- a/src/App.css
+++ b/src/App.css
@@ -279,7 +279,7 @@ body {
   margin: 0px auto;
 
   background: #fff;
-  border-radius: 10px;
+
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   overflow: scroll;
   scrollbar-width: none;
@@ -288,10 +288,13 @@ body {
 /* Kapak Resmi */
 .cover-photo {
   position: relative;
-  border-radius: 2px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
   background: #ddd;
   height: 100px;
-  border-radius: 10px;
   overflow: hidden;
 }
 
