--- a/src/component/pages/dashboard/profile/profile.css
+++ b/src/component/pages/dashboard/profile/profile.css
@@ -17,6 +17,8 @@
 
 .mobile-banner img {
   width: 100%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   height: 100%;
   object-fit: cover;
 }
