--- a/src/component/pages/accountDelete/deleteAccount.css
+++ b/src/component/pages/accountDelete/deleteAccount.css
@@ -138,11 +138,15 @@
 .input-wrapper {
   position: relative;
 }
-
+#NewInputWrapper {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
 .password-toggle {
   position: absolute;
   right: 15px;
-  top: 70%;
+  top: 56%;
   transform: translateY(-50%);
   background: none;
   border: none;
