--- a/src/App.css
+++ b/src/App.css
@@ -1136,6 +1136,7 @@ input[type="file"] {
   display: flex;
   align-items: center;
   padding: 10px;
+  background-color: #e0e0e0;
   border-radius: 12px;
   margin-bottom: 12px;
   position: relative;
