--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,3 @@
-html.lenis {
-  height: auto;
-}
-
-.lenis.lenis-smooth {
-  scroll-behavior: auto !important;
-}
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
 
 /* Dashboard Layout - Main Structure */
 .dashboard-layout {
@@ -22,7 +7,10 @@ html.lenis {
   overflow: hidden;
   background-color: #f5f7fa;
 }
-
+.loaderLogo{
+  height:'500px'; 
+  width: '500px'
+}
 /* Sidebar Styles */
 .dashboard-sidebar {
   width: 250px;
