--- a/src/component/pages/login/Login.css
+++ b/src/component/pages/login/Login.css
@@ -22,6 +22,7 @@
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
   min-height: 600px;
+  
 }
 
 /* Back Button */
@@ -403,6 +404,7 @@
     flex-direction: column;
     max-width: 500px;
     border-radius: 0.5rem;
+    margin-top: 148%;
   }
   
   .signin-col-left {
