--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@
   align-items: center;
   gap: 8px;
   padding: 10px 18px;
-  background-color: #3d3a35;
+  background-color: #f86461;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -118,7 +118,7 @@
 }
 
 .share-profile-button:hover {
-  background-color: rgba(22, 199, 25, 0.25);
+  background-color: #e23675;
   transform: translateY(-2px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   border-color: rgba(239, 6, 6, 0.3);
