--- a/src/component/pages/links/UserInfo.css
+++ b/src/component/pages/links/UserInfo.css
@@ -84,7 +84,7 @@
 .header-content p {
   margin: 0;
   opacity: 0.9;
-  font-size: 14px;
+  font-size: 18px;
   word-wrap: break-word;
 }
 
@@ -316,8 +316,8 @@
 }
 
 .user-avatar {
-  width: 36px;
-  height: 36px;
+    width: 63px;
+    height: 62px;
   border-radius: 50%;
   background: #edf2f7;
   display: flex;
@@ -337,8 +337,8 @@
 
 .username {
   font-weight: 500;
-  color: #2d3748;
-  font-size: 14px;
+  color: white;
+  font-size: 20px;
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
@@ -357,7 +357,6 @@
 
 .no-ip {
   color: #a0aec0;
-  font-style: italic;
 }
 
 .clicks-cell {
